--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
-<html lang=en>
-  <head>
-    <meta charset=UTF-8 />
-  <meta http-equiv=X-UA-Compatible content=IE=edge>
-    <meta name=viewport content=width=device-width, initial-scale=1.0 />
-    <title>W11B</title>
-      <script src=/js/app.js></script>
-  </head>
-  <body>
-    <p>Hello World!</p>
-  </body>
-</html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>W11B</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fasthand&family=PT+Sans:ital,wght@1,700&family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap"
+    rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fasthand&family=PT+Sans:ital,wght@1,700&family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+  <heaer id="header">
+    <h2 class="logo">Logo</h2>
+    <nav class="nav">
+      <a href="/pages/checkout.html"> checkout<img src="/images/shopping-cart.svg" alt="shoping cart"></a>
+    </nav>
+  </heaer>
+  <main id="main">
+    <h1 class="main_title">Keto Ice Cream Recipes</h1>
+
+    <section id="main-section">
+
+
+    </section>
+    <section id="section-two">
+
+    </section>
+
+  </main>
+  <footer id="footer">
+    <p class="footer_text"> Lorem consectetur adipisicing elit. Sequi, cupiditate quia vibus illum
+      optio!</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
+  <script src="/js/app.js"></script>
+</body>
+
+</html>
