--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check-out</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fasthand&family=PT+Sans:ital,wght@1,700&family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="/css/checkout.css">
+
 </head>
 
 <body>
